--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -109,7 +109,8 @@ links_title: 友链
 #links_layout: block
 #links_layout: inline
 links:
-  空缺: http://lle.coding.me/
+  看猫的点这里: https://weibo.com/u/1930323872
+  自如-品质租房选自如: http://www.ziroom.com/
 
 # Sidebar Avatar
 # in theme directory(source/images): /images/avatar.gif
