--- a/_config.yml
+++ b/_config.yml
@@ -105,4 +105,4 @@ deploy:
   type: git
   repo: 
     github: git@github.com:zylele/zylele.github.io.git,master
-    coding: git@git.coding.net:lle/lle.git,master
+    coding: git@git.dev.tencent.com:lle/lle.git,master
