--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: 乐章
-subtitle: Stay young, stay simple
-description: 一天到晚搞事情
+subtitle: --------------------------------
+description: 放轻松
 keywords:
 author: Lele
 language: zh-CN
@@ -13,7 +13,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: https://zylele.github.io
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -122,9 +122,9 @@ theme_config:
       # `heart` is recommended with animation in red (#ff0000).
       name: heart
       # If you want to animate the icon, set it to true.
-      animated: false
+      animated: true
       # Change the color of icon, using Hex Code.
-      color: "#808080"
+      color: "#EE4242"
 
   # Change headers hierarchy on site-subtitle (will be main site description) and on all post/pages titles for better SEO-optimization.
   seo: true
@@ -161,17 +161,10 @@ theme_config:
     微博: http://weibo.com/lelewan || weibo
     领英: https://www.linkedin.com/in/znyalor || linkedin
 
-  # Follow me on GitHub banner in right-top corner.
-  # Usage: `permalink || title`
-  # Value before `||` delimeter is the target permalink.
-  # Value after `||` delimeter is the title and aria-label name.
-  github_banner: https://github.com/zylele || Follow me on GitHub
-
   # Blog rolls
   links_title: 友链
   links:
     看猫的点这里: https://weibo.com/u/1930323872
-    自如-品质租房选自如: http://www.ziroom.com/
 
   # Sidebar Avatar
   avatar:
@@ -179,12 +172,6 @@ theme_config:
     # in site  directory(source/uploads): /uploads/avatar.gif
     # You can also use other linking images.
     url: /img/sys/avatar.jpg
-    # If true, the avatar would be dispalyed in circle.
-    rounded: true
-    # The value of opacity should be choose from 0 to 1 to set the opacity of the avatar.
-    opacity: 1
-    # If true, the avatar would be rotated with the cursor.
-    rotated: false
 
   sidebar:
     # Scroll percent label in b2t button.
@@ -230,6 +217,16 @@ theme_config:
   local_search:
     enable: true
     trigger: auto
+
+  # Use velocity to animate everything.
+  motion:
+    enable: false
+
+  # Fancybox. There is support for old version 2 and new version 3.
+  # Please, choose only any one variant, do not need to install both.
+  # For install 2.x: https://github.com/theme-next/theme-next-fancybox
+  # For install 3.x: https://github.com/theme-next/theme-next-fancybox3
+  fancybox: true
 
   # Reward
   reward_comment: 点击按钮，就能爱我
