--- a/.travis.yml
+++ b/.travis.yml
@@ -1,45 +1,35 @@
-# Refrecnes:
-# http://www.think-diff.me/2016/05/28/travis-ci-deploy-blog/
-# https://zespia.tw/blog/2015/01/21/continuous-deployment-to-github-with-travis/
-# https://docs.travis-ci.com/user/languages/javascript-with-nodejs
-# https://github.com/iissnan/theme-next-docs/blob/master/.travis.yml
-# http://changyuheng.me/2015/when-hexo-static-site-meets-github-pages-and-travis-ci/
-
-sudo: false
+# 配置语言及相应版本
 language: node_js
+sudo: false
 node_js: stable
-cache: npm
-branches:
-  only:
-    - master # build master branch only
-
-before_install:
-  - export TZ='Asia/Shanghai' # 更改时区
-
-install:
-  - npm install
-
-script:
-  - hexo clean
-  - hexo g
-
-after_script:
-  - cd public
-  - git init
-
-  - git config --global user.name 'zylele'
-  - git config --global user.email 657345933@qq.com
-
-  - git add .
-  - git commit -m "Travis CI Auto Builder at `date +"%Y-%m-%d %H:%M"`"
-  - git push --force --quiet "https://${GH_TOKEN}@${GIT_PAGE_REF}" master:master
-
+# 项目所在分支
 branches:
   only:
     - master
-env:
- global:
-   - GIT_PAGE_REF: github.com/zylele/zylele.github.io.git
+# node_modules 缓存
+cache: npm
+# 配置环境
+before_install:
+  - export TZ='Asia/Shanghai' # 更改时区
+  # 替换为刚才生成的解密信息
+  - openssl aes-256-cbc -K $encrypted_c171215980a9_key -iv $encrypted_c171215980a9_iv -in .travis/id_rsa.enc -out ~/.ssh/id_rsa -d
+  # 改变文件权限
+  - chmod 600 ~/.ssh/id_rsa
+  # 配置 ssh
+  - eval $(ssh-agent)
+  - ssh-add ~/.ssh/id_rsa
+  - cp .travis/ssh_config ~/.ssh/config
+  # 配置 git 替换为自己的信息
+  - git config --global user.name 'zylele'
+  - git config --global user.email 657345933@qq.com
+
+# 安装依赖
+install:
+- npm install
+# 部署的命令
+script:
+- hexo clean
+- hexo g -d
 
 # configure notifications (email, IRC, campfire etc)
 # please update this section to your needs!
