--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
     "version": "3.8.0"
   },
   "dependencies": {
+    "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.2.0",
+    "gulp-htmlclean": "^2.7.22",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^6.1.1",
+    "gulp-uglify": "^3.0.2",
     "hexo": "^3.7.0",
     "hexo-deployer-git": "^0.3.1",
     "hexo-generator-archive": "^0.1.5",
