--- a/package.json
+++ b/package.json
@@ -2,8 +2,14 @@
   "name": "hexo-site",
   "version": "0.0.0",
   "private": true,
+  "scripts": {
+    "build": "hexo generate",
+    "clean": "hexo clean",
+    "deploy": "hexo deploy",
+    "server": "hexo server"
+  },
   "hexo": {
-    "version": "3.8.0"
+    "version": "3.9.0"
   },
   "dependencies": {
     "babel-core": "^6.26.3",
@@ -15,8 +21,7 @@
     "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^6.1.1",
     "gulp-uglify": "^3.0.2",
-    "hexo": "^3.7.0",
-    "hexo-deployer-git": "^0.3.1",
+    "hexo": "^3.9.0",
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.1",
@@ -24,8 +29,8 @@
     "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-renderer-ejs": "^0.3.1",
-    "hexo-renderer-marked": "^0.3.2",
     "hexo-renderer-stylus": "^0.3.3",
-    "hexo-server": "^0.3.1"
+    "hexo-renderer-marked": "^2.0.0",
+    "hexo-server": "^0.3.3"
   }
 }
