--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-imagemin": "^6.1.1",
     "gulp-uglify": "^3.0.2",
     "hexo": "^3.9.0",
+    "hexo-deployer-git": "^2.0.0",
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.1",
@@ -29,8 +30,8 @@
     "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-renderer-ejs": "^0.3.1",
-    "hexo-renderer-stylus": "^0.3.3",
     "hexo-renderer-marked": "^2.0.0",
+    "hexo-renderer-stylus": "^0.3.3",
     "hexo-server": "^0.3.3"
   }
 }
