--- a/_config.yml
+++ b/_config.yml
@@ -221,7 +221,7 @@ theme_config:
 
   # FancyBox is a tool that offers a nice and elegant way to add zooming functionality for images.
   # For more information: https://fancyapps.com/fancybox
-  fancybox: false
+  fancybox: true
 
   # Local search
   # Dependencies: https://github.com/theme-next/hexo-generator-searchdb
