--- a/.travis.yml
+++ b/.travis.yml
@@ -37,9 +37,8 @@ script:
 # configure notifications (email, IRC, campfire etc)
 # please update this section to your needs!
 # https://docs.travis-ci.com/user/notifications/
-notifications --org:
-  email --org:
+notifications:
+  email:
     - 657345933@qq.com
-    - znyalor@gmail.com
-  on_success --org: always
-  on_failure --org: always
+  on_success: always
+  on_failure: always
