--- a/_config.next.yml
+++ b/_config.next.yml
@@ -30,6 +30,8 @@ feed:
 footer:
   # Specify the date when the site was setup. If not defined, current year will be used.
   since: 2015
+  # Powered by Hexo & NexT
+  powered: false
 
 
 # ---------------------------------------------------------------
