--- a/_config.yml
+++ b/_config.yml
@@ -105,5 +105,5 @@ deploy:
   type: git
   repo: 
     github: git@github.com:zylele/zylele.github.io.git,master
-    coding: git@git.dev.tencent.com:lle/lle.git,master
-  message: Travis CI Auto Builder :{{ now('YYYY-MM-DD HH:mm:ss') }}
+    # coding: git@git.dev.tencent.com:lle/lle.git,master
+  message: Auto CI Builder :{{ now('YYYY-MM-DD HH:mm:ss') }}
