--- a/_config.next.yml
+++ b/_config.next.yml
@@ -83,7 +83,7 @@ scheme: Muse
 # External url should start with http:// or https://
 menu:
   home: / || fa fa-home
-  categories: /categories/ || fa fa-th
+  # categories: /categories/ || fa fa-th
   tags: /tags/ || fa fa-tags
   archives: /archives/ || fa fa-archive
   about: /about/ || fa fa-user
