--- a/_config.next.yml
+++ b/_config.next.yml
@@ -66,9 +66,9 @@ footer:
 # ---------------------------------------------------------------
 
 # Schemes
-scheme: Muse
+#scheme: Muse
 #scheme: Mist
-#scheme: Pisces
+scheme: Pisces
 #scheme: Gemini
 
 
