--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "hexo-generator-sitemap": "^3.0.1",
     "hexo-generator-tag": "^2.0.0",
     "hexo-renderer-ejs": "^2.0.0",
-    "hexo-renderer-marked": "^6.0.0",
+    "hexo-renderer-markdown-it": "^7.0.0",
     "hexo-renderer-stylus": "^2.1.0",
     "hexo-server": "^3.0.0",
-    "hexo-theme-next": "^8.15.0"
+    "hexo-theme-next": "^8.15.0",
+    "markdown-it-emoji": "^2.0.2"
   }
 }
