--- a/_config.yml
+++ b/_config.yml
@@ -91,8 +91,8 @@ pagination_dir: page
 # Include / Exclude file(s)
 ## include:/exclude: options only apply to the 'source/' folder
 include:
-exclude: 
-ignore: resume/
+exclude:
+ignore:
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
