--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,11 +3,21 @@ name: Hexo Blog CI
 
 # master branch on push, auto run
 on: 
+  schedule:
+    - cron: '0 0 * * *'
   push:
     branches:
       - master
       
 jobs:
+  update-social:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: zylele/social-readme@feature_aaa
+        with:
+          blog_rss_link: https://zylele.github.io/atom.xml
+          douban_name: znyalor
+          file_path: source/about/index2.md
   build: 
     runs-on: ubuntu-latest 
         
