--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,49 +10,53 @@ on:
       - master
       
 jobs:
-  update-social:
+  update_social:
     runs-on: ubuntu-latest
     steps:
+      - name: social-readme
       - uses: zylele/social-readme@feature_aaa
         with:
           blog_rss_link: https://zylele.github.io/atom.xml
           douban_name: znyalor
           file_path: source/about/index.md
-  build: 
+
+  deploy_blog: 
+    needs: update_social
+
     runs-on: ubuntu-latest 
         
     steps:
-    # check it to your workflow can access it
-    # from: https://github.com/actions/checkout
-    - name: Checkout Repository master branch
-      uses: actions/checkout@master 
-      
-    # from: https://github.com/actions/setup-node  
-    - name: Setup Node.js
-      uses: actions/setup-node@master
-      with:
-        node-version: "18.x"
-    
-    - name: Setup Hexo Dependencies
-      run: |
-        npm install hexo-cli -g
-        npm install
-    
-    - name: Setup Deploy Private Key
-      env:
-        HEXO_DEPLOY_PRIVATE_KEY: ${{ secrets.HEXO_DEPLOY_PRIVATE_KEY }}
-      run: |
-        mkdir -p ~/.ssh/
-        echo "$HEXO_DEPLOY_PRIVATE_KEY" > ~/.ssh/id_rsa 
-        chmod 600 ~/.ssh/id_rsa
-        ssh-keyscan github.com >> ~/.ssh/known_hosts
+      # check it to your workflow can access it
+      # from: https://github.com/actions/checkout
+      - name: Checkout Repository master branch
+        uses: actions/checkout@master 
         
-    - name: Setup Git Infomation
-      run: |
-        git config --global user.name 'zylele' 
-        git config --global user.email '657345933@qq.com'
-    - name: Deploy Hexo 
-      run: |
-        hexo clean
-        hexo generate 
-        hexo deploy
+      # from: https://github.com/actions/setup-node  
+      - name: Setup Node.js
+        uses: actions/setup-node@master
+        with:
+          node-version: "18.x"
+      
+      - name: Setup Hexo Dependencies
+        run: |
+          npm install hexo-cli -g
+          npm install
+      
+      - name: Setup Deploy Private Key
+        env:
+          HEXO_DEPLOY_PRIVATE_KEY: ${{ secrets.HEXO_DEPLOY_PRIVATE_KEY }}
+        run: |
+          mkdir -p ~/.ssh/
+          echo "$HEXO_DEPLOY_PRIVATE_KEY" > ~/.ssh/id_rsa 
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
+          
+      - name: Setup Git Infomation
+        run: |
+          git config --global user.name 'zylele' 
+          git config --global user.email '657345933@qq.com'
+      - name: Deploy Hexo 
+        run: |
+          hexo clean
+          hexo generate 
+          hexo deploy
