--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
           blog_rss_link: https://zylele.github.io/atom.xml
           douban_name: znyalor
           file_path: source/about/index.md
-          gh_token: ${{ secrets.GITHUB_TOKEN }}
+          gh_token: ${{ secrets.GH_TOKEN }}
 
   deploy_blog: 
     needs: update_social
