--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,8 @@ on:
       
 jobs:
   update_social:
+    permissions:
+      contents: write 
     runs-on: ubuntu-latest
     steps:
       - name: social-readme
@@ -19,7 +21,7 @@ jobs:
           blog_rss_link: https://zylele.github.io/atom.xml
           douban_name: znyalor
           file_path: source/about/index.md
-          gh_token: ${{ secrets.GH_TOKEN }}
+          gh_token: ${{ secrets.GITHUB_TOKEN }}
 
   deploy_blog: 
     needs: update_social
