--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       contents: write 
     runs-on: ubuntu-latest
     steps:
-      - name: social-readme
+      - name: update_social_readme
         uses: zylele/social-readme@feature_aaa
         with:
           blog_rss_link: https://zylele.github.io/atom.xml
