--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   update_social:
     permissions:
-      contents: write 
+      contents: read-all|write-all 
     runs-on: ubuntu-latest
     steps:
       - name: update_social_readme
