--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,6 @@
 # workflow name
 name: Hexo Blog CI
 
-permissions: write-all
-
 # master branch on push, auto run
 on: 
   schedule:
@@ -13,6 +11,8 @@ on:
       
 jobs:
   update_social:
+    permissions:
+      contents: write 
     runs-on: ubuntu-latest
     steps:
       - name: update_social_readme
