--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   update_social:
     permissions:
-      contents: write 
+      contents: write
     runs-on: ubuntu-latest
     steps:
       - name: update_social_readme
@@ -21,6 +21,7 @@ jobs:
           blog_rss_link: https://zylele.github.io/atom.xml
           douban_name: znyalor
           file_path: source/about/index.md
+          gh_token: ${{ secrets.GITHUB_TOKEN }}
 
   deploy_blog: 
     needs: update_social
