--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,6 @@ on:
       
 jobs:
   update_social:
-    permissions:
-      contents: write
     runs-on: ubuntu-latest
     steps:
       - name: update_social_readme
@@ -21,7 +19,7 @@ jobs:
           blog_rss_link: https://zylele.github.io/atom.xml
           douban_name: znyalor
           file_path: source/about/index.md
-          gh_token: ${{ github.token }}
+          gh_token: ${{ secrets.GITHUB_TOKEN }}
 
   deploy_blog: 
     needs: update_social
