--- a/.github/workflows/social.yml
+++ b/.github/workflows/social.yml
@@ -11,9 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: update_social_readme
-        uses: zylele/social-readme@feature_aaa
+        uses: zylele/social-readme@master
         with:
           blog_rss_link: https://zylele.github.io/atom.xml
           douban_name: znyalor
           file_path: source/about/index.md
-          gh_token: ${{ secrets.GITHUB_TOKEN }}
