--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "hexo": "^6.3.0",
+    "hexo-admin": "^2.3.0",
     "hexo-all-minifier": "^0.5.7",
     "hexo-deployer-git": "^4.0.0",
     "hexo-generator-archive": "^2.0.0",
@@ -27,7 +28,6 @@
     "hexo-renderer-stylus": "^2.1.0",
     "hexo-server": "^3.0.0",
     "hexo-theme-next": "^8.15.1",
-    "markdown-it-emoji": "^2.0.2",
-    "hexo-admin": "^2.3.0"
+    "markdown-it-emoji": "^2.0.2"
   }
 }
