--- a/_config.yml
+++ b/_config.yml
@@ -105,6 +105,7 @@ deploy:
   type: git
   repo: 
     github: git@github.com:zylele/zylele.github.io.git,master
+      token: $gh_token
     # coding: git@git.dev.tencent.com:lle/lle.git,master
   message: Auto CI Builder :{{ now('yyyy-MM-dd HH:mm:ss') }}
 
