--- a/.github/workflows/blog-build-deployment.yml
+++ b/.github/workflows/blog-build-deployment.yml
@@ -3,27 +3,14 @@ name: blog-build-deployment
 
 # master branch on push, auto run
 on: 
-  schedule:
-    - cron: '0 0 * * *'
   push:
     branches:
       - master
   workflow_dispatch:
 
 jobs:
-  update_social:
-    runs-on: ubuntu-latest
-    steps:
-      - name: update_social_readme
-        uses: zylele/social-readme@master
-        with:
-          douban_name: znyalor
-          file_path: source/about/index.md
-
   deploy_blog: 
-    needs: update_social
     runs-on: ubuntu-latest 
-        
     steps:
       # check it to your workflow can access it
       # from: https://github.com/actions/checkout
@@ -41,21 +28,10 @@ jobs:
           npm install hexo-cli -g
           npm install
       
-      - name: Setup Deploy Private Key
-        env:
-          HEXO_DEPLOY_PRIVATE_KEY: ${{ secrets.HEXO_DEPLOY_PRIVATE_KEY }}
-        run: |
-          mkdir -p ~/.ssh/
-          echo "$HEXO_DEPLOY_PRIVATE_KEY" > ~/.ssh/id_rsa 
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan github.com >> ~/.ssh/known_hosts
-          
-      - name: Setup Git Infomation
-        run: |
-          git config --global user.name 'zylele' 
-          git config --global user.email '657345933@qq.com'
       - name: Deploy Hexo 
         run: |
           hexo clean
           hexo generate 
           hexo deploy
+        with:
+          gh_token: ${{ secrets.GH_TOKEN }}
