--- a/.github/workflows/blog-build-deployment.yml
+++ b/.github/workflows/blog-build-deployment.yml
@@ -32,6 +32,7 @@ jobs:
       
       - name: Deploy Hexo
         run: |
+          echo "${{ env.gh_token }}"
           hexo clean
           hexo generate
           hexo deploy
