--- a/.github/workflows/blog-build-deployment.yml
+++ b/.github/workflows/blog-build-deployment.yml
@@ -12,7 +12,7 @@ jobs:
   deploy_blog: 
     runs-on: ubuntu-latest
     env:
-      gh_token: ${{ secrets.GH_TOKEN }}
+      GH_TOKEN: ${{ secrets.GH_TOKEN }}
     steps:
       # check it to your workflow can access it
       # from: https://github.com/actions/checkout
@@ -33,6 +33,7 @@ jobs:
       - name: Deploy Hexo
         run: |
           echo "${{ env.gh_token }}"
+          echo "${{ env.GH_TOKEN }}"
           hexo clean
           hexo generate
           hexo deploy
