--- a/_config.yml
+++ b/_config.yml
@@ -105,9 +105,12 @@ deploy:
   type: git
   repo: 
     github: 
-      url: https://${GH_TOKEN}github.com/zylele/zylele.github.io.git
+      url: https://github.com/zylele/zylele.github.io.git
       branch: master
+      token: $GH_TOKEN
   message: Auto CI Builder :{{ now('yyyy-MM-dd HH:mm:ss') }}
+  name: zylele
+  email: 657345933@qq.com
 
 markdown:
   render:
