--- a/.github/workflows/blog-build-deployment.yml
+++ b/.github/workflows/blog-build-deployment.yml
@@ -10,9 +10,7 @@ on:
 
 jobs:
   deploy_blog: 
-    runs-on: ubuntu-latest
-    env:
-      GH_TOKEN: ${{ secrets.GH_TOKEN }}
+    runs-on: ubuntu-latest 
     steps:
       # check it to your workflow can access it
       # from: https://github.com/actions/checkout
@@ -30,8 +28,21 @@ jobs:
           npm install hexo-cli -g
           npm install
       
-      - name: Deploy Hexo
+      - name: Setup Deploy Private Key
+        env:
+          HEXO_DEPLOY_PRIVATE_KEY: ${{ secrets.HEXO_DEPLOY_PRIVATE_KEY }}
+        run: |
+          mkdir -p ~/.ssh/
+          echo "$HEXO_DEPLOY_PRIVATE_KEY" > ~/.ssh/id_rsa 
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
+          
+      - name: Setup Git Infomation
+        run: |
+          git config --global user.name 'zylele' 
+          git config --global user.email '657345933@qq.com'
+      - name: Deploy Hexo 
         run: |
           hexo clean
-          hexo generate
+          hexo generate 
           hexo deploy
