--- a/.github/workflows/blog-update-social.yml
+++ b/.github/workflows/blog-update-social.yml
@@ -16,3 +16,4 @@ jobs:
         with:
           douban_name: znyalor
           file_path: source/about/index.md
+          gh_token: ${{ secrets.HEXO_DEPLOY_PRIVATE_KEY }}
