--- a/.github/workflows/manual-check.yml
+++ b/.github/workflows/manual-check.yml
@@ -12,8 +12,20 @@ jobs:
         with:
           node-version: '20.x'
 
+      - name: Install npm-check-updates
+        run: npm install -g npm-check-updates
+
       - name: Check updates
         run: |
-          npx npm-check-updates --format table
-          echo "## 更新建议" >> $GITHUB_STEP_SUMMARY
-          npx npm-check-updates --format table >> $GITHUB_STEP_SUMMARY
+          echo "=== 依赖更新检查 ==="
+          ncu
+
+      - name: Generate update report
+        run: |
+          echo "## 依赖更新报告" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "以下依赖包可以更新：" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo '```' >> $GITHUB_STEP_SUMMARY
+          ncu >> $GITHUB_STEP_SUMMARY
+          echo '```' >> $GITHUB_STEP_SUMMARY
