--- a/_config.next.yml
+++ b/_config.next.yml
@@ -155,10 +155,9 @@ site_state: true
 # Value before `||` delimiter is the target permalink, value after `||` delimiter is the name of Font Awesome icon.
 social:
   GitHub: https://github.com/zylele || fab fa-github
-  微博: http://weibo.com/lelewan || fab fa-weibo
   领英: https://www.linkedin.com/in/znyalor || fab fa-linkedin
   #GitHub: https://github.com/yourname || fab fa-github
-  #E-Mail: mailto:yourname@gmail.com || fa fa-envelope
+  E-Mail: mailto:znyalor@gmail.com || fa fa-envelope
   #Weibo: https://weibo.com/yourname || fab fa-weibo
   #Twitter: https://twitter.com/yourname || fab fa-twitter
   #FB Page: https://www.facebook.com/yourname || fab fa-facebook
