--- a/.github/workflows/blog-build-deployment.yml
+++ b/.github/workflows/blog-build-deployment.yml
@@ -37,7 +37,11 @@ jobs:
 
       - name: Commit cards
         uses: stefanzweifel/git-auto-commit-action@v5
-          
+        with:
+          commit_user_name: github-actions[bot]
+          commit_user_email: github-actions[bot]@users.noreply.github.com
+          file_pattern: source/profile/*.svg
+
   deploy_blog:
     # 动态设置 needs
     needs: [update_social, update_stats_cards]
