--- a/.github/workflows/hexo-deploy.yml
+++ b/.github/workflows/hexo-deploy.yml
@@ -6,47 +6,14 @@ on:
   push:
     branches:
       - master
-  schedule:
-    - cron: '0 0 * * *'
   workflow_dispatch:
+  workflow_run:
+    workflows: [ "update-social" ]
+    types:
+      - completed
 
 jobs:
-  update_social:
-    if: ${{ contains(fromJSON('["schedule", "workflow_dispatch"]'), github.event_name) }}
-    runs-on: ubuntu-latest
-    steps:
-      - name: update_social_readme
-        uses: zylele/social-readme@master
-        with:
-          douban_name: znyalor
-          file_path: source/about/index.md
-
-  update_stats_cards:
-    if: ${{ contains(fromJSON('["schedule", "workflow_dispatch"]'), github.event_name) }}
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Generate stats card
-        uses: readme-tools/github-readme-stats-action@v1
-        with:
-          card: stats
-          options: username=${{ github.repository_owner }}&show_icons=true
-          path: source/profile/stats.svg
-          token: ${{ github.token }}
-
-      - name: Commit cards
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_user_name: github-actions[bot]
-          commit_user_email: github-actions[bot]@users.noreply.github.com
-          file_pattern: source/profile/*.svg
-
-  deploy_blog:
-    # 动态设置 needs
-    needs: [update_social, update_stats_cards]
-    if: always()
-
+  hexo-deploy:
     runs-on: ubuntu-latest
     steps:
       # check it to your workflow can access it
