--- a/.github/workflows/update-github-stat.yml
+++ b/.github/workflows/update-github-stat.yml
@@ -26,4 +26,5 @@ jobs:
         with:
           commit_user_name: github-actions[bot]
           commit_user_email: github-actions[bot]@users.noreply.github.com
+          commit_author: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
           file_pattern: source/profile/*.svg
