--- a/.github/workflows/all-deploy.yml
+++ b/.github/workflows/all-deploy.yml
@@ -1,13 +1,22 @@
 # workflow name
-name: update-github-stat
+name: Scheduled deployment
 
 # master branch on push, auto run
-on: 
+on:
   schedule:
     - cron: '0 0 * * *'
   workflow_dispatch:
 
 jobs:
+  update-social:
+    runs-on: ubuntu-latest
+    steps:
+      - name: update_social_readme
+        uses: zylele/social-readme@master
+        with:
+          douban_name: znyalor
+          file_path: source/about/index.md
+
   update-github-stat:
     runs-on: ubuntu-latest
     steps:
@@ -28,3 +37,8 @@ jobs:
           commit_user_email: github-actions[bot]@users.noreply.github.com
           commit_author: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
           file_pattern: source/profile/*.svg
+
+  call-reusable:
+    needs: [ update-social, update-github-stat ]
+    if: always()
+    uses: ./.github/workflows/hexo-deploy.yml
